Ho provato a fare la RecyclerView, ma nulla. Ho problemi nel farlo ocn il binding, online trovo solo roba in il findViewById, quindi succede un macello. Quindi la classe RistorantiFragment è da rivedere, insieme al resto.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,11 @@
     <string name="open_nav">Open Navigation Drawer</string>
     <string name="close_nav">Close Navigation Drawer</string>
 
+    <string name="head_1">Ristorante a</string>
+    <string name="head_2">Ristorante b</string>
+    <string name="head_3">Ristorante c</string>
+    <string name="head_4">Ristorante d</string>
+    <string name="head_5">Ristorante e</string>
+    <string name="head_6">Ristorante f</string>
+
 </resources>
